The Qt Visual Studio Add-In version 1.1.9 contains multiple bugfixes and
improvements.

Changes
-------
- Fix a regression when importing .pro files that was introduced in 1.1.8.

