@@ -4,5 +4,6 @@ improvements.
 Changes
 -------
 - Fix a regression when importing .pro files that was introduced in 1.1.8.
+- Make the add-in work with Intel VTune projects. (QTVSADDINBUG-65)
 
 
